alarm with calendar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="full_name">full Name</string>
     <string name="name">Name</string>
     <string name="mon">Mon</string>
+    <string name="amount">amount to take</string>
 </resources>
